# agent-cv

./: .gitignore  README.md  pyproject.toml
agent_cv/actions/: __init__.py  dataset_actions.py  training_actions.py
agent_cv/agents/: __init__.py  data_agent.py  integration_agent.py  orchestrator_agent.py  training_agent.py
agent_cv/data_processing/: __init__.py  data_loader.py  dataset_analyzer.py
agent_cv/execution/: __init__.py  interpreter.py
agent_cv/lmm/: __init__.py  lmm.py
agent_cv/models/: __init__.py  dataset.py  messages.py  training.py
agent_cv/utils/: __init__.py  formatting.py  logs.py
tests/utils/: test_formatting.py
