[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_cv"]

[project]
name = "agent-cv"
version = "0.1.0"
description = "Agentic system to automatically train portable CV models"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "YOLO@git+https://github.com/MultimediaTechLab/YOLO.git",
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "anthropic",
    "tqdm",
    "pydantic",
    "nbclient",
    "nbformat",
    "ipykernel",
    "rich",
    "dotenv",
    "requests",
]

[tool.hatch.metadata]
allow-direct-references = true